--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/09/2020 04:34:00 AM</p>
+    <p class="lastupdate">09/09/2020 04:39:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">58.8&#176;F</td>
+        <td class="data">58.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">58.8&#176;F</td>
+        <td class="data">58.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">58.8&#176;F</td>
+        <td class="data">58.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">51.2&#176;F</td>
+        <td class="data">50.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">76%</td>
+        <td class="data">75%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.745 inHg (0.028)</td>
+        <td class="data">29.749 inHg (0.030)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">0 mph N/A (   N/A)</td>
+        <td class="data">1 mph N (0&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,11 +86,11 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">75.7&#176;F</td>
+        <td class="data">75.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
-        <td class="data">43%</td>
+        <td class="data">44%</td>
       </tr>
     </tbody>
   </table>
@@ -155,14 +155,14 @@
         <td class="data new_row hilo_day">
           <span title="12:00:01 AM">
             65.4</span><br/>
-          <span title="04:23:49 AM">
-            58.8</span>
+          <span title="04:37:59 AM">
+            58.7</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="04:04:42 PM (Sunday)">
             117.5</span><br/>
-          <span title="04:23:49 AM (Wednesday)">
-            58.8</span>
+          <span title="04:37:59 AM (Wednesday)">
+            58.7</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/06/2020 04:04:42 PM">
@@ -211,12 +211,12 @@
       <tr>
         <td class="label">Wind Chill</td>
         <td class="data new_row hilo_day">
-          <span title="04:23:49 AM" class="loval">
-            58.8</span>
+          <span title="04:37:59 AM" class="loval">
+            58.7</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="04:23:49 AM (Wednesday)" class="loval">
-            58.8</span>
+          <span title="04:37:59 AM (Wednesday)" class="loval">
+            58.7</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/01/2020 06:47:50 AM" class="loval">
@@ -303,8 +303,8 @@
       <tr>
         <td class="label">Barometer</td>
         <td class="data new_row hilo_day">
-          <span title="04:27:01 AM">
-            29.745</span><br/>
+          <span title="04:38:01 AM">
+            29.749</span><br/>
           <span title="12:01:01 AM">
             29.700</span>
         </td>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">7 days, 13 hours, 47 minutes</td>
+      <td class="data">7 days, 13 hours, 52 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">7 days, 13 hours, 47 minutes</td>
+      <td class="data">7 days, 13 hours, 52 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
