--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/09/2020 05:19:00 AM</p>
+    <p class="lastupdate">09/09/2020 05:24:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">58.3&#176;F</td>
+        <td class="data">58.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">58.3&#176;F</td>
+        <td class="data">58.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">58.3&#176;F</td>
+        <td class="data">58.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">50.4&#176;F</td>
+        <td class="data">50.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">75%</td>
+        <td class="data">77%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.764 inHg (0.041)</td>
+        <td class="data">29.762 inHg (0.041)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">0 mph N/A (   N/A)</td>
+        <td class="data">2 mph NNE (22&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">75.9&#176;F</td>
+        <td class="data">75.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -119,7 +119,7 @@
         <tr>
           <td class="label">Moon Phase</td>
           <td class="data">Last quarter<br/>
-            58%</td>
+            57%</td>
         </tr>
       </table>
     </div>
@@ -155,14 +155,14 @@
         <td class="data new_row hilo_day">
           <span title="12:00:01 AM">
             65.4</span><br/>
-          <span title="05:15:45 AM">
-            58.3</span>
+          <span title="05:23:47 AM">
+            58.1</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="04:04:42 PM (Sunday)">
             117.5</span><br/>
-          <span title="05:15:45 AM (Wednesday)">
-            58.3</span>
+          <span title="05:23:47 AM (Wednesday)">
+            58.1</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/06/2020 04:04:42 PM">
@@ -211,12 +211,12 @@
       <tr>
         <td class="label">Wind Chill</td>
         <td class="data new_row hilo_day">
-          <span title="05:15:45 AM" class="loval">
-            58.3</span>
+          <span title="05:23:47 AM" class="loval">
+            58.1</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="05:15:45 AM (Wednesday)" class="loval">
-            58.3</span>
+          <span title="05:23:47 AM (Wednesday)" class="loval">
+            58.1</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/01/2020 06:47:50 AM" class="loval">
@@ -237,8 +237,8 @@
         <td class="data new_row hilo_day">
           <span title="01:05:37 AM">
             54.3</span><br/>
-          <span title="05:17:35 AM">
-            50.4</span>
+          <span title="05:20:21 AM">
+            50.3</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="11:23:38 AM (Monday)">
@@ -269,14 +269,14 @@
       <tr>
         <td class="label">Humidity</td>
         <td class="data new_row hilo_day">
-          <span title="04:27:11 AM">
-            76</span><br/>
+          <span title="05:21:51 AM">
+            77</span><br/>
           <span title="12:00:01 AM">
             63</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="04:27:11 AM (Wednesday)">
-            76</span><br/>
+          <span title="05:21:51 AM (Wednesday)">
+            77</span><br/>
           <span title="04:59:20 PM (Sunday)">
             9</span>
         </td>
@@ -440,7 +440,7 @@
         </td>
         <td class="data new_row hilo_day">
           0<br/>
-          358
+          359
         </td>
         <td class="data new_row hilo_week">
           0<br/>
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">94%</td>
+      <td class="data">98%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">7 days, 14 hours, 32 minutes</td>
+      <td class="data">7 days, 14 hours, 37 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">7 days, 14 hours, 32 minutes</td>
+      <td class="data">7 days, 14 hours, 37 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
