--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/09/2020 05:24:00 AM</p>
+    <p class="lastupdate">09/09/2020 05:29:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,19 +50,19 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">58.1&#176;F</td>
+        <td class="data">58.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">58.1&#176;F</td>
+        <td class="data">58.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">58.1&#176;F</td>
+        <td class="data">58.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">50.9&#176;F</td>
+        <td class="data">50.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
@@ -70,11 +70,11 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.762 inHg (0.041)</td>
+        <td class="data">29.764 inHg (0.043)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">2 mph NNE (22&#176;)</td>
+        <td class="data">1 mph SSW (202&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -155,14 +155,14 @@
         <td class="data new_row hilo_day">
           <span title="12:00:01 AM">
             65.4</span><br/>
-          <span title="05:23:47 AM">
-            58.1</span>
+          <span title="05:27:01 AM">
+            58.0</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="04:04:42 PM (Sunday)">
             117.5</span><br/>
-          <span title="05:23:47 AM (Wednesday)">
-            58.1</span>
+          <span title="05:27:01 AM (Wednesday)">
+            58.0</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/06/2020 04:04:42 PM">
@@ -211,12 +211,12 @@
       <tr>
         <td class="label">Wind Chill</td>
         <td class="data new_row hilo_day">
-          <span title="05:23:47 AM" class="loval">
-            58.1</span>
+          <span title="05:27:01 AM" class="loval">
+            58.0</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="05:23:47 AM (Wednesday)" class="loval">
-            58.1</span>
+          <span title="05:27:01 AM (Wednesday)" class="loval">
+            58.0</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/01/2020 06:47:50 AM" class="loval">
@@ -269,14 +269,14 @@
       <tr>
         <td class="label">Humidity</td>
         <td class="data new_row hilo_day">
-          <span title="05:21:51 AM">
-            77</span><br/>
+          <span title="05:25:27 AM">
+            78</span><br/>
           <span title="12:00:01 AM">
             63</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="05:21:51 AM (Wednesday)">
-            77</span><br/>
+          <span title="05:25:27 AM (Wednesday)">
+            78</span><br/>
           <span title="04:59:20 PM (Sunday)">
             9</span>
         </td>
@@ -303,8 +303,8 @@
       <tr>
         <td class="label">Barometer</td>
         <td class="data new_row hilo_day">
-          <span title="05:18:01 AM">
-            29.764</span><br/>
+          <span title="05:26:01 AM">
+            29.765</span><br/>
           <span title="12:01:01 AM">
             29.700</span>
         </td>
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">98%</td>
+      <td class="data">94%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">7 days, 14 hours, 37 minutes</td>
+      <td class="data">7 days, 14 hours, 42 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">7 days, 14 hours, 37 minutes</td>
+      <td class="data">7 days, 14 hours, 42 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
