--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/09/2020 05:29:00 AM</p>
+    <p class="lastupdate">09/09/2020 05:34:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">58.0&#176;F</td>
+        <td class="data">57.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">58.0&#176;F</td>
+        <td class="data">57.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">58.0&#176;F</td>
+        <td class="data">57.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">50.8&#176;F</td>
+        <td class="data">51.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">77%</td>
+        <td class="data">78%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.764 inHg (0.043)</td>
+        <td class="data">29.760 inHg (0.037)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">1 mph SSW (202&#176;)</td>
+        <td class="data">1 mph WSW (248&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">75.8&#176;F</td>
+        <td class="data">75.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -155,14 +155,14 @@
         <td class="data new_row hilo_day">
           <span title="12:00:01 AM">
             65.4</span><br/>
-          <span title="05:27:01 AM">
-            58.0</span>
+          <span title="05:30:57 AM">
+            57.8</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="04:04:42 PM (Sunday)">
             117.5</span><br/>
-          <span title="05:27:01 AM (Wednesday)">
-            58.0</span>
+          <span title="05:30:57 AM (Wednesday)">
+            57.8</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/06/2020 04:04:42 PM">
@@ -211,12 +211,12 @@
       <tr>
         <td class="label">Wind Chill</td>
         <td class="data new_row hilo_day">
-          <span title="05:27:01 AM" class="loval">
-            58.0</span>
+          <span title="05:30:57 AM" class="loval">
+            57.8</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="05:27:01 AM (Wednesday)" class="loval">
-            58.0</span>
+          <span title="05:30:57 AM (Wednesday)" class="loval">
+            57.8</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/01/2020 06:47:50 AM" class="loval">
@@ -237,7 +237,7 @@
         <td class="data new_row hilo_day">
           <span title="01:05:37 AM">
             54.3</span><br/>
-          <span title="05:20:21 AM">
+          <span title="05:30:57 AM">
             50.3</span>
         </td>
         <td class="data new_row hilo_week">
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">7 days, 14 hours, 42 minutes</td>
+      <td class="data">7 days, 14 hours, 47 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">7 days, 14 hours, 42 minutes</td>
+      <td class="data">7 days, 14 hours, 47 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
