--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/09/2020 05:34:00 AM</p>
+    <p class="lastupdate">09/09/2020 05:39:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,19 +50,19 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">57.8&#176;F</td>
+        <td class="data">57.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">57.8&#176;F</td>
+        <td class="data">57.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">57.8&#176;F</td>
+        <td class="data">57.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">51.0&#176;F</td>
+        <td class="data">50.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
@@ -70,11 +70,11 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.760 inHg (0.037)</td>
+        <td class="data">29.763 inHg (0.043)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">1 mph WSW (248&#176;)</td>
+        <td class="data">0 mph N/A (   N/A)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,11 +86,11 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">75.2&#176;F</td>
+        <td class="data">74.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
-        <td class="data">43%</td>
+        <td class="data">44%</td>
       </tr>
     </tbody>
   </table>
@@ -155,14 +155,14 @@
         <td class="data new_row hilo_day">
           <span title="12:00:01 AM">
             65.4</span><br/>
-          <span title="05:30:57 AM">
-            57.8</span>
+          <span title="05:35:13 AM">
+            57.7</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="04:04:42 PM (Sunday)">
             117.5</span><br/>
-          <span title="05:30:57 AM (Wednesday)">
-            57.8</span>
+          <span title="05:35:13 AM (Wednesday)">
+            57.7</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/06/2020 04:04:42 PM">
@@ -211,12 +211,12 @@
       <tr>
         <td class="label">Wind Chill</td>
         <td class="data new_row hilo_day">
-          <span title="05:30:57 AM" class="loval">
-            57.8</span>
+          <span title="05:35:13 AM" class="loval">
+            57.7</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="05:30:57 AM (Wednesday)" class="loval">
-            57.8</span>
+          <span title="05:35:13 AM (Wednesday)" class="loval">
+            57.7</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/01/2020 06:47:50 AM" class="loval">
@@ -440,7 +440,7 @@
         </td>
         <td class="data new_row hilo_day">
           0<br/>
-          359
+          358
         </td>
         <td class="data new_row hilo_week">
           0<br/>
@@ -472,14 +472,14 @@
         <td class="data new_row hilo_day">
           <span title="12:26:01 AM">
             78.1</span><br/>
-          <span title="02:09:01 AM">
-            74.8</span>
+          <span title="05:38:01 AM">
+            74.7</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="06:21:03 PM (Sunday)">
             91.8</span><br/>
-          <span title="02:09:01 AM (Wednesday)">
-            74.8</span>
+          <span title="05:38:01 AM (Wednesday)">
+            74.7</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/03/2020 04:03:02 PM">
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">94%</td>
+      <td class="data">98%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">7 days, 14 hours, 47 minutes</td>
+      <td class="data">7 days, 14 hours, 52 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">7 days, 14 hours, 47 minutes</td>
+      <td class="data">7 days, 14 hours, 52 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
