--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/09/2020 05:39:00 AM</p>
+    <p class="lastupdate">09/09/2020 05:44:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -70,11 +70,11 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.763 inHg (0.043)</td>
+        <td class="data">29.761 inHg (0.038)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">0 mph N/A (   N/A)</td>
+        <td class="data">1 mph N (0&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">74.7&#176;F</td>
+        <td class="data">74.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -472,14 +472,14 @@
         <td class="data new_row hilo_day">
           <span title="12:26:01 AM">
             78.1</span><br/>
-          <span title="05:38:01 AM">
-            74.7</span>
+          <span title="05:41:01 AM">
+            74.5</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="06:21:03 PM (Sunday)">
             91.8</span><br/>
-          <span title="05:38:01 AM (Wednesday)">
-            74.7</span>
+          <span title="05:41:01 AM (Wednesday)">
+            74.5</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/03/2020 04:03:02 PM">
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">7 days, 14 hours, 52 minutes</td>
+      <td class="data">7 days, 14 hours, 57 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">7 days, 14 hours, 52 minutes</td>
+      <td class="data">7 days, 14 hours, 57 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
